# solidity

./: CMakeLists.txt  Changelog.md
docs/: abi-spec.rst  cheatsheet.rst  common-patterns.rst  control-structures.rst  introduction-to-smart-contracts.rst  layout-of-source-files.rst  structure-of-a-contract.rst  units-and-global-variables.rst
docs/contracts/: errors.rst
docs/examples/: blind-auction.rst  safe-remote.rst
libevmasm/: Assembly.cpp  Assembly.h  Inliner.cpp  Inliner.h  Instruction.cpp  Instruction.h
liblangutil/: CharStream.cpp  CharStream.h
liblsp/: CMakeLists.txt  Logger.h  Range.h  Server.cpp  Server.h  TcpTransport.cpp  TcpTransport.h  TextBuffer.h  Transport.cpp  Transport.h  VFS.cpp  VFS.h
libsmtutil/: CHCSmtLib2Interface.cpp  SMTLib2Interface.cpp  SMTLib2Interface.h
libsolidity/: CMakeLists.txt
libsolidity/analysis/: ContractLevelChecker.cpp  ContractLevelChecker.h  ControlFlowAnalyzer.cpp  ControlFlowAnalyzer.h  ControlFlowBuilder.cpp  ControlFlowBuilder.h  ControlFlowGraph.cpp  ControlFlowGraph.h  PostTypeChecker.cpp  TypeChecker.cpp  TypeChecker.h
libsolidity/ast/: AST.cpp  AST.h  ASTAnnotations.h  ASTJsonConverter.cpp  ASTJsonImporter.cpp  ExperimentalFeatures.h  Types.cpp  Types.h
libsolutil/: Algorithms.h  CMakeLists.txt  Uri.cpp  Uri.h
libyul/: AssemblyStack.cpp  AssemblyStack.h  CMakeLists.txt
scripts/: ASTImportTest.sh
solc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  lsp-todo.md
test/: CMakeLists.txt  Common.cpp  Common.h  EVMHost.cpp  TestCase.h  boostTest.cpp  cmdlineTests.sh
(+236 files in other folders)
